--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.2
 django-filter==2.4.0
 djangorestframework==3.12.1
@@ -8,4 +9,5 @@ Markdown==3.3.2
 python-decouple==3.3
 pytz==2020.1
 sqlparse==0.4.1
+static3==0.7.0
 zipp==3.3.1
